--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "email": "email dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,10 +22,12 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@react-email/components": "^0.0.42",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.16.0",
+    "inngest": "^3.39.1",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
@@ -34,6 +37,7 @@
     "react-hook-form": "^7.56.3",
     "react-spinners": "^0.17.0",
     "recharts": "^2.15.3",
+    "resend": "^4.5.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2",
@@ -45,6 +49,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "prisma": "^6.7.0",
+    "react-email": "4.0.16",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9"
   }
