--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcjet/next": "^1.0.0-beta.8",
     "@clerk/nextjs": "^6.9.0",
+    "@connectrpc/connect": "^2.0.2",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-checkbox": "^1.3.1",
